fix - start with invisible items

--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -119,7 +119,7 @@
 
 @keyframes bullets {
   0% {
-    transform: scale(0.1, 0.1);
+    transform: scale(0, 0);
   }
   100% {
     transform: scale(1, 1);
